--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   box-sizing: border-box;
   height: auto;
   width: 100%;
-  font-family: 'Poppins', Arial, Helvetica, sans-serif;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
   background: #fff;
 }
 
@@ -33,7 +33,7 @@ body {
 a {
   margin-top: 1rem;
   text-decoration: none;
-  color: #172b4d;
+  color: #253858;
 }
 
 .navbar a {
@@ -106,7 +106,7 @@ p,
   font-size: 0.938rem;
   font-style: normal;
   font-weight: 700;
-  font-family: 'Poppins', Arial, Helvetica, sans-serif;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
 }
 
 span {
@@ -117,7 +117,7 @@ span {
   font-size: 1rem;
   font-style: normal;
   font-weight: 700;
-  font-family: 'Poppins', Arial, Helvetica, sans-serif;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
 }
 
 .media-links {
@@ -144,6 +144,7 @@ span {
   height: auto;
   gap: 2rem;
   margin-left: 1rem;
+  width: 90%;
 }
 
 .card1,
@@ -157,7 +158,6 @@ span {
   background: #fff;
   height: auto;
   padding: 1rem;
-  width: 84%;
 }
 
 .mobileimage1 {
@@ -205,7 +205,7 @@ span {
   font-size: 0.813rem;
   font-style: normal;
   font-weight: 600;
-  font-family: 'Poppins', Arial, Helvetica, sans-serif;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
   color: #7a869a;
 }
 
@@ -215,7 +215,7 @@ span {
   color: #344563;
   font-style: normal;
   font-weight: 600;
-  font-family: 'Poppins', Arial, Helvetica, sans-serif;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
   margin-left: -2.25rem;
 }
 
@@ -223,10 +223,9 @@ span {
   color: #344563;
   margin-left: -1.25rem;
   line-height: 1.5rem;
-  font-size: 0.938rem;
+  font-size: 0.75rem;
   font-style: normal;
   font-weight: 400;
-  font-family: 'Poppins', Arial, Helvetica, sans-serif;
   width: auto;
 }
 
@@ -239,7 +238,8 @@ span {
 
 .teck-list {
   display: flex;
-  gap: 0.5rem;
+  gap: 1.5rem;
+  width: 100%;
   list-style-type: none;
   margin-left: -2rem;
 }
@@ -249,83 +249,109 @@ span {
   border-radius: 0.5rem;
   background-color: #e5e6ecec;
   color: #6070ff;
+  height: 2rem;
+}
+
+.mobile-btn:hover {
+  color: #fff;
+  background-color: #6070ff;
 }
 
 .see-mobile-btn {
-  border: 0.5rem solid #ebebff;
+  border: 0.1rem solid #ebebff;
   border-radius: 0.5rem;
-  height: 2.5rem;
-  font-size: 1rem;
+  height: 3rem;
+  font-size: 1.2rem;
   color: #6070ff;
   margin-top: 0.25rem;
-  width: fit-content;
+  width: 60%;
+  background-color: #fff;
+}
+
+button:active {
+  background-color: #2230d2;
+}
+
+button:disabled {
+  color: #5e6c84;
+}
+
+.see-mobile-btn:hover {
+  color: #fff;
+  background-color: #6070ff;
 }
 
 .about {
   border-top-right-radius: 5rem;
   background-color: #fff;
   border: 0.5rem solid #fff;
-  width: 90%;
+  width: 100%;
   height: 60rem;
   margin-left: 0.5rem;
 }
 
 .resume-mobile-btn {
-  border: 0.5rem solid #ebebff;
+  border: 0.1rem solid #ebebff;
+  background-color: #fff;
   border-radius: 0.8rem;
-  height: 3rem;
-  font-size: 1.2rem;
+  height: 3.5rem;
+  font-size: 1.3rem;
   color: #6070ff;
   margin-top: 0.25rem;
-  width: fit-content;
   margin-left: 1rem;
   font-weight: 500;
   font-style: normal;
+  width: 60%;
+}
+
+.resume-mobile-btn:hover {
+  color: #fff;
+  background-color: #6070ff;
 }
 
 .lang-area {
   display: flex;
   flex-direction: column;
   margin-top: 1rem;
+  margin-left: -3rem;
 }
 
 .stacknav {
   display: flex;
   gap: 6rem;
-  margin-left: 1rem;
   margin-top: 1rem;
+  list-style-type: none;
 }
 
 .frameworks {
   display: flex;
   gap: 5rem;
-  margin-left: 1rem;
   margin-top: 2rem;
   border-bottom: 0.1rem solid #acb7c3;
-  width: 88%;
+  width: 80%;
 }
 
 strong {
-  font-size: 1.3rem;
+  font-size: 1.25rem;
   font-weight: 500;
   font-style: normal;
-  font-family: 'Poppins', Arial, Helvetica, sans-serif;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
   color: #000;
 }
 
 .skills {
   display: flex;
+  font-size: 1.25rem;
   gap: 10rem;
-  margin-left: 1rem;
   margin-top: 1.5rem;
   padding-top: 1rem;
   border-bottom: 0.1rem solid #acb7c3;
-  width: 88%;
+  width: 80%;
 }
 
 .fa-angle-down {
   font-size: 1.3rem;
-  color: #000;
+  color: #505f79;
   border: 0.1rem solid #acb7c3;
   height: 1rem;
   margin-top: 0.5rem;
@@ -333,8 +359,8 @@ strong {
 
 .fa-angle-right {
   font-size: 1.3rem;
-  color: #000;
-  height: 01rem;
+  color: #5E6C84;
+  height: 1rem;
   margin-top: 0.5rem;
 }
 
@@ -342,9 +368,8 @@ strong {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  width: 90%;
-  margin-left: 1rem;
   margin-top: 2rem;
+  list-style-type: none;
 }
 
 .html,
@@ -354,28 +379,30 @@ strong {
   font-size: 1rem;
   font-weight: 500;
   font-style: normal;
-  font-family: 'Poppins', Arial, Helvetica, sans-serif;
-  background-color: #eff2f7;
-  border: 0.1rem solid #acb7c3;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  background-color: #f7f7f9;
+  border: 0.1rem solid #ebebff;
   border-radius: 0.5rem;
+  width: 80%;
+
 }
 
 .html::before {
-  content: url(/images/html.jpg);
+  content: url("/images/html.jpg");
   margin-inline: 1.5rem;
   font-size: 0.1rem;
   margin-left: -0.2rem;
 }
 
 .css::before {
-  content: url(/images/css.png);
+  content: url("/images/css.png");
   margin-inline: 1.5rem;
   margin-left: -0.2rem;
   font-size: 0.1rem;
 }
 
 .js::before {
-  content: url(/images/js.jpg);
+  content: url("/images/js.jpg");
   margin-inline: 1.5rem;
   margin-left: -0.1rem;
   font-size: 0.1rem;
