--- a/style.css
+++ b/style.css
@@ -320,6 +320,7 @@ button:disabled {
   display: flex;
   gap: 6rem;
   margin-top: 1rem;
+  margin-left: 2.5rem;
   list-style-type: none;
 }
 
@@ -329,6 +330,7 @@ button:disabled {
   margin-top: 2rem;
   border-bottom: 0.1rem solid #acb7c3;
   width: 80%;
+  list-style-type: none;
 }
 
 strong {
@@ -337,6 +339,7 @@ strong {
   font-style: normal;
   font-family: Poppins, Arial, Helvetica, sans-serif;
   color: #000;
+  margin-left: -2.5rem;
 }
 
 .skills {
@@ -347,6 +350,7 @@ strong {
   padding-top: 1rem;
   border-bottom: 0.1rem solid #acb7c3;
   width: 80%;
+  list-style-type: none;
 }
 
 .fa-angle-down {
