--- a/style.css
+++ b/style.css
@@ -362,7 +362,7 @@ strong {
 
 .fa-angle-right {
   font-size: 1.3rem;
-  color: #5E6C84;
+  color: #5e6c84;
   height: 1rem;
   margin-top: 0.5rem;
 }
