--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   flex-direction: column;
   width: 100%;
   overflow: hidden;
-  /* position: fixed; */
+  position: fixed;
 }
 
 .navbar {
@@ -410,73 +410,69 @@ strong {
 }
 
 .contact {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    background-color:  #6070ff;
-    border-top-left-radius: 8rem;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-color: #6070ff;
+  border-top-left-radius: 8rem;
+}
 
- }
+.contact-bg-img {
+  background-image: url('/images/mobile-header-bg.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: auto;
+}
 
- .contact-bg-img {
-    background-image: url('/images/mobile-header-bg.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: auto;
- }
-
- input, textarea {
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-    align-items: center;
-    margin-right: 1rem;
-    height: 3rem;
-    padding-left: 01rem;
-    font-size: 1rem;
-    font-weight: 500;
-    font-family: 'Poppins', Arial, Helvetica, sans-serif;
-    background-color: #fff;
-    border: 0.1rem solid #ACB7C3;
-    border-radius: 0.5rem;
-    font-style: normal;
-    margin-left: 1rem;
-    margin-bottom: 0.8rem;
-    color: #7A869A;
-    margin-left: 2rem;
-
- }
-
- textarea {
-    height: 10rem;
-    padding-top: 1rem;
-  
- }
-
- .contact-mobile-btn {
-  border: 0.5rem solid #EBEBFF;
+input,
+textarea {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  align-items: center;
+  margin-right: 1rem;
+  height: 3rem;
+  padding-left: 0.5rem;
+  font-size: 0.9rem;
+  font-weight: 500;
+  font-family: 'Poppins', Arial, Helvetica, sans-serif;
+  background-color: #fff;
+  border: 0.1rem solid #acb7c3;
   border-radius: 0.5rem;
-  height: 2rem;
+  font-style: normal;
+  margin-bottom: 0.8rem;
+  color: #7a869a;
+  margin-left: 2rem;
+}
+
+textarea {
+  height: 10rem;
+  padding-top: 1rem;
+}
+
+.contact-mobile-btn {
+  border: 0.5rem solid #ebebff;
+  border-radius: 0.5rem;
+  height: 2.5rem;
   font-size: 1rem;
   color: #6070ff;
-  margin-top: 2.5rem;
-  width: 40%;
+  margin-top: 1rem;
+  width: 35%;
   margin-left: 2rem;
   font-weight: 500;
   font-style: normal;
 }
 
 .home-btn {
-  width: 30%;
-  margin-top: 2rem;
+  width: 25%;
+  margin-top: 1.5rem;
   margin-left: 8rem;
   margin-bottom: 1rem;
-  
 }
 
 .contact-p {
-  color: #ffffff;
+  color: #fff;
   width: 90%;
   text-align: center;
   display: flex;
@@ -487,4 +483,11 @@ strong {
   font-size: 1.2rem;
   font-style: normal;
   font-weight: 400;
+}
+
+label {
+  display: none;
+  padding-left: 2rem;
+  font-size: 0.9rem;
+  color: #ff000f;
 }
