--- a/style.css
+++ b/style.css
@@ -465,10 +465,14 @@ textarea {
 }
 
 .home-btn {
+  background-image: url('./images/home-btn.png');
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 25%;
   margin-top: 1.5rem;
   margin-left: 8rem;
   margin-bottom: 1rem;
+  height: 0.4rem;
 }
 
 .contact-p {
