--- a/style.css
+++ b/style.css
@@ -452,7 +452,7 @@ textarea {
 }
 
 .contact-mobile-btn {
-  border: 0.5rem solid #ebebff;
+  border: 0.1rem solid #ebebff;
   border-radius: 0.5rem;
   height: 2.5rem;
   font-size: 1rem;
@@ -462,6 +462,11 @@ textarea {
   margin-left: 2rem;
   font-weight: 500;
   font-style: normal;
+}
+
+.contact-mobile-btn:hover {
+  color: #fff;
+  background-color: #6070ff;
 }
 
 .home-btn {
