--- a/style.css
+++ b/style.css
@@ -6,13 +6,14 @@ body {
   box-sizing: border-box;
   height: auto;
   width: 100%;
-  font-family: Poppins, Arial, Helvetica, sans-serif;
-  background: #fff;
+  font-family: 'Poppins', Arial, Helvetica, sans-serif;
+  background: #f7f7f9;
 }
 
 .header {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   width: 100%;
   overflow: hidden;
   position: fixed;
@@ -23,16 +24,17 @@ body {
   justify-content: space-between;
   height: auto;
   padding: 0.8rem;
+  width: 92%;
 }
 
-.navbar i {
+.fa-bars {
   font-size: 1.5rem;
   color: #6070ff;
 }
 
-a {
-  text-decoration: none;
-  color: #253858;
+i {
+  font-size: 1.5rem;
+  color: #6070ff;
 }
 
 .navbar a {
@@ -46,15 +48,17 @@ a {
   width: 100%;
   padding-top: 2rem;
   height: auto;
-  border: 2px solid #fff;
-  border-bottom-left-radius: 4rem;
+  border: 1px solid #f7f7f9;
+  border-bottom-left-radius: 8rem;
 }
 
 .mobile-header-bg {
   background-image: url('./images/mobile-header-bg.png');
   background-repeat: no-repeat;
-  width: 95%;
+  width: 96.5%;
   height: 40rem;
+  padding: 0;
+  margin: 0;
 }
 
 h1 {
@@ -95,7 +99,18 @@ h6 {
   text-align: center;
 }
 
-p,
+p {
+  color: #344563;
+  width: 95%;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  line-height: 1.5rem;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 700;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+}
+
 .about-p {
   color: #344563;
   width: 80%;
@@ -141,8 +156,8 @@ span {
   display: grid;
   height: auto;
   gap: 2rem;
-  margin-left: 1rem;
-  width: 90%;
+  padding-left: 1.5rem;
+  width: 87%;
 }
 
 .card1,
@@ -218,24 +233,26 @@ span {
   margin-left: -2.25rem;
 }
 
-.mobile-paragraph {
+.mobileP {
   color: #344563;
   margin-left: -1.25rem;
   line-height: 1.5rem;
-  font-size: 0.75rem;
+  font-size: 0.8rem;
   font-style: normal;
   font-weight: 400;
   width: auto;
 }
 
-.teck {
+.teck,
+.deskTeck {
   display: flex;
   flex-direction: column;
   width: 100%;
   margin-left: -0.5rem;
 }
 
-.teck-list {
+.teck-list,
+.deskTeck-list {
   display: flex;
   gap: 1.5rem;
   width: 100%;
@@ -243,7 +260,8 @@ span {
   margin-left: -2rem;
 }
 
-.mobile-btn {
+.mobile-btn,
+.desk-btn {
   border: 0.1rem solid #ebebff;
   border-radius: 0.5rem;
   background-color: #e5e6ecec;
@@ -256,13 +274,18 @@ span {
   background-color: #6070ff;
 }
 
+.desk-btn:hover {
+  color: #fff;
+  background-color: #6070ff;
+}
+
 .see-mobile-btn {
   border: 0.1rem solid #ebebff;
   border-radius: 0.5rem;
   height: 3rem;
   font-size: 1rem;
   color: #6070ff;
-  margin-top: 0.25rem;
+  margin-top: 1rem;
   width: 45%;
   background-color: #fff;
 }
@@ -286,7 +309,7 @@ button:disabled {
 
 .about {
   border-top-right-radius: 5rem;
-  background-color: #fff;
+  background: #fff;
   border: 1rem solid #fff;
   width: 90%;
   height: 60rem;
@@ -303,7 +326,7 @@ button:disabled {
   margin-left: 1rem;
   font-weight: 500;
   font-style: normal;
-  width: 60%;
+  width: 50%;
 }
 
 .resume-mobile-btn:hover {
@@ -383,6 +406,11 @@ strong {
   list-style-type: none;
 }
 
+.stacks li a {
+  text-decoration: none;
+  margin-top: 1rem;
+}
+
 .html,
 .css,
 .js {
@@ -390,7 +418,7 @@ strong {
   font-size: 1rem;
   font-weight: 500;
   font-style: normal;
-  font-family: Poppins, Arial, Helvetica, sans-serif;
+  font-family: 'Poppins', Arial, Helvetica, sans-serif;
   background-color: #f7f7f9;
   border: 0.1rem solid #ebebff;
   border-radius: 0.5rem;
@@ -427,7 +455,7 @@ strong {
 }
 
 .contact-bg-img {
-  background-image: url('/images/mobile-header-bg.png');
+  background-image: url('./images/contact-bg.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -516,4 +544,530 @@ label {
   padding-left: 2rem;
   font-size: 0.9rem;
   color: #ff000f;
+}
+
+/* mobile media - 768px below */
+
+@media (max-width: 768px) {
+  .menu,
+  .deskH1,
+  .deskTitle1,
+  .deskCompany2,
+  .deskP,
+  .deskTeck,
+  .mobileHideJob,
+  .mobileHideYear,
+  #deskP {
+    display: none;
+  }
+}
+
+/* desktop media - 768px onwards */
+
+@media (min-width: 768px) {
+  h1,
+  h3,
+  h4,
+  .navbar i,
+  .mobileimage1,
+  .mobileimage2,
+  #deskHideCanopy,
+  #deshHideP2,
+  .mobileP,
+  .mobileTeck,
+  .mobileimage3,
+  .mobileimage4,
+  #deskHideJob,
+  #deskHideYear,
+  .contact-bg-img,
+  .home-btn {
+    display: none;
+  }
+
+  body {
+    box-sizing: border-box;
+    background: #f7f7f9;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+  }
+
+  .menu {
+    display: flex;
+    justify-content: space-between;
+    padding-right: 2rem;
+  }
+
+  .list {
+    list-style-type: none;
+  }
+
+  .list a {
+    color: #344563;
+    text-align: center;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px;
+  }
+
+  #deskHeaderBg {
+    background-image: url('./images/desktopHeader-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: auto;
+    width: 100%;
+    border-bottom-left-radius: 8rem;
+  }
+
+  .main {
+    width: 100%;
+    height: auto;
+  }
+
+  .deskH1 {
+    display: flex;
+    flex-direction: column;
+    padding-left: 10rem;
+    width: 100%;
+    height: auto;
+    color: #091e42;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    font-size: 3rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 3.75rem;
+    letter-spacing: 0.023125rem;
+  }
+
+  p {
+    display: flex;
+    flex-direction: column;
+    padding-left: 10rem;
+    width: 70%;
+    color: #344563;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.75rem;
+  }
+
+  .about-p {
+    display: flex;
+    flex-direction: column;
+    width: 75%;
+    color: #344563;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.75rem;
+  }
+
+  span {
+    display: flex;
+    color: var(--primary-b-300, #7f8cff);
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 2.5rem;
+    padding-left: 10rem;
+  }
+
+  .connect {
+    display: flex;
+    color: var(--primary-b-300, #7f8cff);
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 2.5rem;
+    margin-left: -8.5rem;
+  }
+
+  .navbar a {
+    color: #6070ff;
+    text-decoration: none;
+    padding-left: 4rem;
+    padding-top: 1rem;
+    font-size: 1.2rem;
+  }
+
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    height: auto;
+    padding: 0.4rem;
+    width: 100%;
+    background: #f7f7f9;
+  }
+
+  .media-links {
+    display: flex;
+    flex-flow: wrap;
+    gap: 2rem;
+    padding-left: 10.5rem;
+    width: 100%;
+  }
+
+  #connect-media-links {
+    display: flex;
+    flex-flow: wrap;
+    gap: 2rem;
+    margin-left: -8rem;
+    margin-top: 1.5rem;
+    width: 100%;
+  }
+
+  .media-links li {
+    list-style-type: none;
+    margin-top: -0.5rem;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .media-links i {
+    margin-left: -1rem;
+    font-size: 1.3rem;
+    color: #505f79;
+    width: 1.2rem;
+  }
+
+  .cards {
+    display: grid;
+    height: auto;
+    gap: 2rem;
+    margin-left: 10rem;
+    width: 80%;
+    margin-top: 5rem;
+    background: #f7f7f9;
+  }
+
+  .card1,
+  .card2,
+  .card3,
+  .card4 {
+    display: grid;
+    grid-template-columns: 1.3fr 1.2fr;
+    border-radius: 1rem;
+    background: #fff;
+    height: 26rem;
+    padding: 1rem;
+    width: 100%;
+    margin-top: 4rem;
+  }
+
+  .about {
+    display: grid;
+    grid-template-columns: 1.2fr 1fr;
+    border: 0.063rem solid #fff;
+    border-top-right-radius: 8rem;
+    height: 30rem;
+    padding-left: 9rem;
+    width: 100%;
+    margin-top: 5rem;
+  }
+
+  .grid-column,
+  .about-grid-column {
+    display: flex;
+    flex-direction: column;
+  }
+
+  h2 {
+    font-size: 2.5rem;
+    color: #172b4d;
+    width: 100%;
+    height: auto;
+    font-weight: 700;
+    font-style: normal;
+    line-height: 2rem;
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+  }
+
+  h5 {
+    font-size: 2.5rem;
+    color: #172b4d;
+    width: 100%;
+    height: auto;
+    font-weight: 700;
+    font-style: normal;
+    line-height: 2rem;
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .deskTitle1 {
+    font-size: 2.5rem;
+    color: #091e42;
+    width: 70%;
+    height: auto;
+    font-weight: 700;
+    font-style: normal;
+    line-height: 2rem;
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    margin-left: 0.5rem;
+  }
+
+  .deskImg1 {
+    background-image: url('./images/deskImg1.png');
+    background-repeat: no-repeat;
+    height: auto;
+    width: 100%;
+    border-radius: 0.5rem;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .deskImg2 {
+    background-image: url('./images/deskImg2.png');
+    background-repeat: no-repeat;
+    height: auto;
+    width: 100%;
+    border-radius: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    order: 2;
+  }
+
+  .deskImg3 {
+    background-image: url('./images/deskImg3.png');
+    background-repeat: no-repeat;
+    height: auto;
+    width: 100%;
+    border-radius: 0.5rem;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .deskImg4 {
+    background-image: url('./images/deskImg4.jpg');
+    background-repeat: no-repeat;
+    height: auto;
+    width: 100%;
+    border-radius: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    order: 2;
+  }
+
+  .mobile {
+    list-style-type: none;
+    display: flex;
+    width: 60%;
+    gap: 1.5rem;
+    line-height: 150%;
+    margin-top: -0.5rem;
+  }
+
+  .mobile li {
+    list-style: disc;
+    color: #6b778c;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+  }
+
+  .mobile .company,
+  .deskCompany {
+    list-style-type: none;
+    font-style: normal;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    color: #344563;
+    font-size: 1.2rem;
+    font-weight: 500;
+  }
+
+  .deskP {
+    color: #344563;
+    padding-left: 0.5rem;
+    line-height: 1.5rem;
+    font-size: 0.95rem;
+    font-style: normal;
+    font-weight: 400;
+    width: 82%;
+  }
+
+  .contact-p {
+    color: #fff;
+    line-height: 1.5rem;
+    font-size: 1.2rem;
+    font-style: normal;
+    font-weight: 400;
+    width: 40%;
+    text-align: center;
+    padding-left: 30rem;
+  }
+
+  .mobile .deskCompany2 {
+    list-style-type: none;
+    margin-left: -2rem;
+    color: #091e42;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+  }
+
+  #desk-resume-btn {
+    display: flex;
+    align-items: center;
+    width: 24%;
+    margin-top: 1.5rem;
+  }
+
+  .lang-area {
+    display: flex;
+    flex-direction: column;
+    margin-top: 1rem;
+    margin-left: -14rem;
+    width: 100%;
+  }
+
+  .fa-angle-down {
+    font-size: 1.3rem;
+    color: #505f79;
+    border: 0.1rem solid #acb7c3;
+    height: 1rem;
+    margin-top: 0.5rem;
+  }
+
+  .fa-angle-right {
+    font-size: 1.3rem;
+    color: #5e6c84;
+    height: 1rem;
+    margin-top: 0.5rem;
+    margin-inline: 14rem;
+  }
+
+  .stacknav {
+    display: flex;
+    gap: 19rem;
+    margin-top: 1rem;
+    list-style-type: none;
+    width: 100%;
+  }
+
+  .stacks {
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
+    list-style-type: none;
+    width: 80%;
+  }
+
+  .html,
+  .css,
+  .js {
+    display: grid;
+    font-size: 0.9rem;
+    font-weight: 500;
+    font-style: normal;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    background-color: #f7f7f9;
+    width: 80%;
+    margin-left: 1.2rem;
+  }
+
+  .stacks a {
+    margin-top: -1rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .css::before {
+    margin-left: 1rem;
+    font-size: 0.5rem;
+  }
+
+  .js::before {
+    margin-left: 1rem;
+    font-size: 0.5rem;
+  }
+
+  .html::before {
+    margin-left: 1rem;
+    font-size: 0.5rem;
+  }
+
+  .contact {
+    display: flex;
+    flex-direction: column;
+    background-color: #6070ff;
+    border-top-left-radius: 8rem;
+    width: 90rem;
+    height: 41rem;
+  }
+
+  h6 {
+    font-size: 2.5rem;
+    color: #fff;
+    width: 100%;
+    font-weight: 500;
+    font-style: normal;
+    line-height: 1rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  input,
+  textarea {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    align-items: center;
+    height: 3rem;
+    font-size: 0.9rem;
+    font-weight: 500;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    background-color: #fff;
+    border: 0.1rem solid #acb7c3;
+    border-radius: 0.5rem;
+    font-style: normal;
+    margin-bottom: 0.8rem;
+    color: #7a869a;
+    margin-left: 32rem;
+  }
+
+  textarea {
+    height: 8rem;
+    padding-top: 1rem;
+  }
+
+  .contact-mobile-btn {
+    border: 0.01rem solid #ebebff;
+    border-radius: 0.5rem;
+    height: 2.5rem;
+    font-size: 1rem;
+    color: #6070ff;
+    margin-top: 1rem;
+    width: 10%;
+    margin-left: 40rem;
+    font-weight: 500;
+    font-style: normal;
+  }
+
+  .see-mobile-btn {
+    border: 0.1rem solid #ebebff;
+    border-radius: 0.5rem;
+    height: 3rem;
+    font-size: 1rem;
+    color: #6070ff;
+    margin-top: 1.5rem;
+    width: 30%;
+    background: #fff;
+    letter-spacing: 0.2rem;
+  }
 }
