--- a/style.css
+++ b/style.css
@@ -21,10 +21,9 @@ body {
 
 .navbar {
   display: flex;
-  justify-content: space-between;
   height: auto;
   padding: 0.8rem;
-  width: 92%;
+  gap: 16rem;
 }
 
 .fa-bars {
@@ -85,29 +84,28 @@ h5 {
 
 h5 {
   margin-left: 1.6rem;
-  margin-top: 4rem;
   margin-bottom: -0.1rem;
 }
 
 h6 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   color: #fff;
   width: 100%;
   font-weight: 500;
   font-style: normal;
   line-height: 1rem;
   text-align: center;
+  padding-top: 6rem;
 }
 
 p {
   color: #344563;
-  width: 95%;
+  width: 92%;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
   line-height: 1.5rem;
   font-size: 1rem;
   font-style: normal;
-  font-weight: 700;
   font-family: Poppins, Arial, Helvetica, sans-serif;
 }
 
@@ -308,11 +306,12 @@ button:disabled {
 }
 
 .about {
-  border-top-right-radius: 5rem;
+  border-top-right-radius: 8rem;
   background: #fff;
   border: 1rem solid #fff;
-  width: 90%;
+  width: 100%;
   height: 60rem;
+  margin-top: 3rem;
 }
 
 .resume-mobile-btn {
@@ -343,7 +342,6 @@ button:disabled {
   display: flex;
   flex-direction: column;
   margin-top: 1rem;
-  margin-left: -3rem;
 }
 
 .stacknav {
@@ -359,7 +357,7 @@ button:disabled {
   gap: 5rem;
   margin-top: 2rem;
   border-bottom: 0.1rem solid #acb7c3;
-  width: 80%;
+  width: 87%;
   list-style-type: none;
 }
 
@@ -367,19 +365,19 @@ strong {
   font-size: 1.25rem;
   font-weight: 500;
   font-style: normal;
-  font-family: Poppins, Arial, Helvetica, sans-serif;
-  color: #000;
+  font-family: 'Poppins', Arial, Helvetica, sans-serif;
+  color: #344563;
   margin-left: -2.5rem;
 }
 
 .skills {
   display: flex;
   font-size: 1.25rem;
-  gap: 10rem;
+  gap: 9.5rem;
   margin-top: 1.5rem;
   padding-top: 1rem;
   border-bottom: 0.1rem solid #acb7c3;
-  width: 80%;
+  width: 87%;
   list-style-type: none;
 }
 
@@ -409,6 +407,8 @@ strong {
 .stacks li a {
   text-decoration: none;
   margin-top: 1rem;
+  color: #253858;
+  font-size: 0.9rem;
 }
 
 .html,
@@ -446,7 +446,7 @@ strong {
   font-size: 0.1rem;
 }
 
-.contact {
+.contactSection {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -454,8 +454,8 @@ strong {
   border-top-left-radius: 8rem;
 }
 
-.contact-bg-img {
-  background-image: url('./images/contact-bg.jpg');
+.contactMobileBg {
+  background-image: url('/images/contactMobileBg.png');
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -579,14 +579,12 @@ label {
   .mobileimage4,
   #deskHideJob,
   #deskHideYear,
-  .contact-bg-img,
   .home-btn {
     display: none;
   }
 
   body {
     box-sizing: border-box;
-    background: #f7f7f9;
     margin: 0;
     padding: 0;
     width: 100%;
@@ -608,7 +606,6 @@ label {
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
     font-size: 15px;
     font-style: normal;
-    font-weight: 500;
     line-height: 20px;
   }
 
@@ -636,7 +633,6 @@ label {
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
     font-size: 3rem;
     font-style: normal;
-    font-weight: 700;
     line-height: 3.75rem;
     letter-spacing: 0.023125rem;
   }
@@ -648,21 +644,19 @@ label {
     width: 70%;
     color: #344563;
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
-    font-size: 1.25rem;
+    font-size: 1rem;
     font-style: normal;
-    font-weight: 400;
     line-height: 1.75rem;
   }
 
   .about-p {
     display: flex;
     flex-direction: column;
-    width: 75%;
+    width: 35%;
     color: #344563;
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
-    font-size: 1rem;
+    font-size: 0.9rem;
     font-style: normal;
-    font-weight: 400;
     line-height: 1.75rem;
   }
 
@@ -672,7 +666,6 @@ label {
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
     font-size: 1rem;
     font-style: normal;
-    font-weight: 500;
     line-height: 2.5rem;
     padding-left: 10rem;
   }
@@ -683,7 +676,6 @@ label {
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
     font-size: 1rem;
     font-style: normal;
-    font-weight: 500;
     line-height: 2.5rem;
     margin-left: -8.5rem;
   }
@@ -740,8 +732,8 @@ label {
     display: grid;
     height: auto;
     gap: 2rem;
-    margin-left: 10rem;
-    width: 80%;
+    margin-left: 12rem;
+    width: 100%;
     margin-top: 5rem;
     background: #f7f7f9;
   }
@@ -756,25 +748,30 @@ label {
     background: #fff;
     height: 26rem;
     padding: 1rem;
-    width: 100%;
+    width: 80%;
     margin-top: 4rem;
   }
 
   .about {
     display: grid;
-    grid-template-columns: 1.2fr 1fr;
+    grid-template-rows: 1fr 1fr;
     border: 0.063rem solid #fff;
-    border-top-right-radius: 8rem;
-    height: 30rem;
-    padding-left: 9rem;
-    width: 100%;
+    border-top-right-radius: 10rem;
+    height: 40rem;
+    padding-left: 8rem;
+    width: 90.4%;
     margin-top: 5rem;
   }
 
-  .grid-column,
+  .grid-column {
+    display: flex;
+    flex-direction: column;
+  }
+
   .about-grid-column {
     display: flex;
     flex-direction: column;
+    margin-top: 4rem;
   }
 
   h2 {
@@ -782,7 +779,6 @@ label {
     color: #172b4d;
     width: 100%;
     height: auto;
-    font-weight: 700;
     font-style: normal;
     line-height: 2rem;
     margin-top: 1rem;
@@ -795,7 +791,6 @@ label {
     color: #172b4d;
     width: 100%;
     height: auto;
-    font-weight: 700;
     font-style: normal;
     line-height: 2rem;
     margin-top: 2rem;
@@ -808,7 +803,6 @@ label {
     color: #091e42;
     width: 70%;
     height: auto;
-    font-weight: 700;
     font-style: normal;
     line-height: 2rem;
     margin-top: 1rem;
@@ -875,7 +869,6 @@ label {
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
     font-size: 1rem;
     font-style: normal;
-    font-weight: 400;
   }
 
   .mobile .company,
@@ -885,7 +878,6 @@ label {
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
     color: #344563;
     font-size: 1.2rem;
-    font-weight: 500;
   }
 
   .deskP {
@@ -894,7 +886,6 @@ label {
     line-height: 1.5rem;
     font-size: 0.95rem;
     font-style: normal;
-    font-weight: 400;
     width: 82%;
   }
 
@@ -903,10 +894,9 @@ label {
     line-height: 1.5rem;
     font-size: 1.2rem;
     font-style: normal;
-    font-weight: 400;
-    width: 40%;
+    width: 36%;
     text-align: center;
-    padding-left: 30rem;
+    margin-left: 18rem;
   }
 
   .mobile .deskCompany2 {
@@ -915,23 +905,33 @@ label {
     color: #091e42;
     font-size: 1rem;
     font-style: normal;
-    font-weight: 400;
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
   }
 
   #desk-resume-btn {
     display: flex;
     align-items: center;
-    width: 24%;
+    width: 10%;
     margin-top: 1.5rem;
+    font-size: 1.2rem;
+    padding-left: 0.5rem;
   }
 
   .lang-area {
     display: flex;
     flex-direction: column;
+    margin-top: -25rem;
+    margin-left: 30rem;
+    width: 50%;
+  }
+
+  .stacknav {
+    display: flex;
+    gap: 19rem;
     margin-top: 1rem;
-    margin-left: -14rem;
-    width: 100%;
+    list-style-type: none;
+    width: 50%;
+    padding-top: 2rem;
   }
 
   .fa-angle-down {
@@ -940,6 +940,7 @@ label {
     border: 0.1rem solid #acb7c3;
     height: 1rem;
     margin-top: 0.5rem;
+    margin-inline: 10rem;
   }
 
   .fa-angle-right {
@@ -947,15 +948,7 @@ label {
     color: #5e6c84;
     height: 1rem;
     margin-top: 0.5rem;
-    margin-inline: 14rem;
-  }
-
-  .stacknav {
-    display: flex;
-    gap: 19rem;
-    margin-top: 1rem;
-    list-style-type: none;
-    width: 100%;
+    margin-inline: 21rem;
   }
 
   .stacks {
@@ -971,7 +964,6 @@ label {
   .js {
     display: grid;
     font-size: 0.9rem;
-    font-weight: 500;
     font-style: normal;
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
     background-color: #f7f7f9;
@@ -984,6 +976,7 @@ label {
     width: 100%;
     display: flex;
     flex-direction: column;
+    color: #253858;
   }
 
   .css::before {
@@ -1001,25 +994,33 @@ label {
     font-size: 0.5rem;
   }
 
-  .contact {
+  .contactSection {
     display: flex;
     flex-direction: column;
+    width: 100%;
     background-color: #6070ff;
     border-top-left-radius: 8rem;
-    width: 90rem;
-    height: 41rem;
+    height: 47rem;
+  }
+
+  .contactMobileBg {
+    background-image: url('./images/contactDeskBg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: auto;
   }
 
   h6 {
     font-size: 2.5rem;
     color: #fff;
     width: 100%;
-    font-weight: 500;
     font-style: normal;
     line-height: 1rem;
     text-align: center;
     display: flex;
     flex-direction: column;
+    padding-left: 1rem;
   }
 
   input,
@@ -1030,7 +1031,6 @@ label {
     align-items: center;
     height: 3rem;
     font-size: 0.9rem;
-    font-weight: 500;
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
     background-color: #fff;
     border: 0.1rem solid #acb7c3;
@@ -1038,7 +1038,7 @@ label {
     font-style: normal;
     margin-bottom: 0.8rem;
     color: #7a869a;
-    margin-left: 32rem;
+    margin-left: 30rem;
   }
 
   textarea {
@@ -1054,8 +1054,7 @@ label {
     color: #6070ff;
     margin-top: 1rem;
     width: 10%;
-    margin-left: 40rem;
-    font-weight: 500;
+    margin-left: 38rem;
     font-style: normal;
   }
 
@@ -1066,8 +1065,35 @@ label {
     font-size: 1rem;
     color: #6070ff;
     margin-top: 1.5rem;
-    width: 30%;
+    width: 21%;
     background: #fff;
-    letter-spacing: 0.2rem;
+  }
+
+  strong {
+    font-size: 1rem;
+    font-style: normal;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    color: #344563;
+    padding-left: 1rem;
+  }
+
+  .frameworks {
+    display: flex;
+    gap: 8rem;
+    margin-top: 2rem;
+    border-bottom: 0.1rem solid #acb7c3;
+    width: 87%;
+    list-style-type: none;
+  }
+
+  .skills {
+    display: flex;
+    font-size: 1.25rem;
+    gap: 12rem;
+    margin-top: 1.5rem;
+    padding-top: 1rem;
+    border-bottom: 0.1rem solid #acb7c3;
+    width: 87%;
+    list-style-type: none;
   }
 }
