--- a/styles/style.css
+++ b/styles/style.css
@@ -19,10 +19,19 @@ body {
 .return-error-message {
   color: #f80606;
   margin-top: 20px;
-  text-shadow: 2px 3px 1px #0d151e;
+  /* text-shadow: 2px 3px 1px #0d151e; */
   font-size: 20px;
-  background-color: rgb(96, 92, 92);
-  width: 70%;
+  background-color: #fff;
+  width: auto;
+  height: auto;
+}
+
+#return-success-message {
+  color: #f80606;
+  margin-top: 20px;
+  font-size: 20px;
+  background-color: #fff;
+  width: auto;
   height: auto;
 }
 
