--- a/styles/style.css
+++ b/styles/style.css
@@ -19,17 +19,6 @@ body {
 .return-error-message {
   color: #f80606;
   margin-top: 20px;
-
-  /* text-shadow: 2px 3px 1px #0d151e; */
-  font-size: 20px;
-  background-color: #fff;
-  width: auto;
-  height: auto;
-}
-
-#return-success-message {
-  color: #f80606;
-  margin-top: 20px;
   font-size: 20px;
   background-color: #fff;
   width: auto;
@@ -873,12 +862,6 @@ textarea {
   font-size: 20px;
 }
 
-/* .deskTech,  */
-
-/* .modalDeskTech {
-  display: none;
-} */
-
 /* Desktop popup section */
 @media (min-width: 768px) {
   .desktopPopupImg {
@@ -1004,7 +987,7 @@ textarea {
     font-size: 1rem;
     height: 25rem;
     transition: all 1s ease;
-    content: url('/images/ENSSAH\ FAYIA\ MOMOH.jpg');
+    content: url('/images/EFM.jpg');
     padding-right: 4rem;
   }
 }
